--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-image-crop": "^11.0.7",
     "react-router-dom": "^6.30.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.10.0",
