--- a/package.json
+++ b/package.json
@@ -5,20 +5,38 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
-    "@tailwindcss/postcss": "^4.0.9",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@reduxjs/toolkit": "^2.6.1",
+    "@stomp/stompjs": "^6.1.2",
+    "@tanstack/query-sync-storage-persister": "^5.67.2",
+    "@tanstack/react-query": "^5.67.3",
+    "@tanstack/react-query-persist-client": "^5.67.2",
     "@tanstack/react-table": "^8.21.2",
+    "assert": "^2.1.0",
     "axios": "^1.8.1",
     "cra-template": "1.2.0",
+    "date-fns": "^4.1.0",
+    "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
+    "msgpack5": "^6.0.2",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0",
+    "react-icons": "^5.4.0",
     "react-image-crop": "^11.0.7",
-    "react-router-dom": "^6.30.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^6.8.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.10.0",
     "react-tabs": "^6.1.0",
+    "react-virtualized": "^9.22.6",
+    "react-window": "^1.8.11",
     "recharts": "^2.15.1",
+    "socket.io-client": "^4.8.1",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
+    "util": "^0.12.5",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
@@ -47,7 +65,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.3",
+    "postcss": "^8.5.2",
     "tailwindcss": "^3.4.17"
   }
 }
