--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@tanstack/react-table": "^8.21.2",
     "assert": "^2.1.0",
     "axios": "^1.8.1",
+    "chart.js": "^4.4.8",
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.6.3",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "msgpack5": "^6.0.2",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-image-crop": "^11.0.7",
